--- a/window.ui
+++ b/window.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>223</width>
-    <height>308</height>
+    <height>429</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,25 +19,25 @@
      <rect>
       <x>10</x>
       <y>20</y>
-      <width>61</width>
+      <width>101</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>Resolution:</string>
+     <string>Input Resolution</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="resolution">
     <property name="geometry">
      <rect>
-      <x>80</x>
+      <x>110</x>
       <y>20</y>
-      <width>121</width>
+      <width>91</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>1920x1080</string>
+     <string>1920:1080</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_2">
@@ -128,7 +128,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>Bitrate</string>
+     <string>CRF</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="bitrate">
@@ -141,7 +141,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>5000k</string>
+     <string>20</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_6">
@@ -174,7 +174,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>260</y>
+      <y>370</y>
       <width>80</width>
       <height>25</height>
      </rect>
@@ -187,7 +187,7 @@
     <property name="geometry">
      <rect>
       <x>80</x>
-      <y>200</y>
+      <y>320</y>
       <width>54</width>
       <height>17</height>
      </rect>
@@ -200,9 +200,9 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>220</y>
+      <y>340</y>
       <width>201</width>
-      <height>31</height>
+      <height>21</height>
      </rect>
     </property>
     <property name="text">
@@ -226,13 +226,117 @@
     <property name="geometry">
      <rect>
       <x>130</x>
-      <y>260</y>
+      <y>370</y>
       <width>80</width>
       <height>25</height>
      </rect>
     </property>
     <property name="text">
      <string>Stop</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="acodec">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>200</y>
+      <width>111</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>aac</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_9">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>200</y>
+      <width>71</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Audio Codec</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_10">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>290</y>
+      <width>111</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Output Resolution</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="resolution_2">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>290</y>
+      <width>81</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>1920x1080</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_11">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>230</y>
+      <width>81</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Audio Bitrate</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="abitrate">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>230</y>
+      <width>111</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>320k</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_12">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>260</y>
+      <width>61</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Audio rate</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="arate">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>260</y>
+      <width>111</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>48000</string>
     </property>
    </widget>
   </widget>
